--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,12 @@ language: go
 go:
   - 1.3
   - 1.4
+
+before_install:
+  - go get github.com/axw/gocov/gocov
+  - go get github.com/mattn/goveralls
+  - if ! go get code.google.com/p/go.tools/cmd/cover; then go get golang.org/x/tools/cmd/cover; fi
+  - go get -v ./...
+
+script:
+  - $HOME/gopath/bin/goveralls -service=travis-ci
